fix: inputs paddings fix #1064

--- a/libs/components/src/lib/components/input/common/input-icon-button/input-icon-button.component.less
+++ b/libs/components/src/lib/components/input/common/input-icon-button/input-icon-button.component.less
@@ -7,7 +7,8 @@
   padding: 0;
   background: transparent;
 
-  width: var(--prizm-input-icon-button-width, 32px);
+  width: var(--prizm-input-icon-button-width, 24px);
+  height: var(--prizm-input-icon-button-height, 24px);
   font-size: inherit;
 
   color: var(--prizm-v3-text-icon-secondary);
