--- a/apps/doc/src/app/components/cron-human-readable/examples/func/cron-func-example.component.html
+++ b/apps/doc/src/app/components/cron-human-readable/examples/func/cron-func-example.component.html
@@ -1,8 +1,8 @@
-<div>
+<div class="box">
   Input:
   <b>0 0 * ? * * *</b>
 </div>
-<div>
+<div class="box">
   Result:
   <b>{{ prizmCronHRToString('0 0 * ? * * *', { locale: 'en' }) }}</b>
 </div>
