--- a/libs/components/src/lib/components/cron/cron.component.less
+++ b/libs/components/src/lib/components/cron/cron.component.less
@@ -1,7 +1,7 @@
 @import '../../../styles/ui-local';
 
 .block {
-  border: 1px solid var(--prizm-border-widget);
+  border: 1px solid var(--prizm-v3-background-stroke);
   border-radius: 2px;
   padding: 6px 0;
 
@@ -42,18 +42,13 @@
 }
 
 .border-bottom {
-  border-bottom: 1px solid var(--prizm-border-widget);
+  border-bottom: 1px solid var(--prizm-v3-background-stroke);
 }
 
 .sub-pages {
   width: 100%;
   display: block;
   padding-top: 16px;
-}
-
-.copy-icon {
-  color: var(--prizm-border-widget);
-  cursor: pointer;
 }
 
 .submit-block {
