--- a/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.less
+++ b/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.less
@@ -6,7 +6,7 @@
   font-size: var(--prizm-confirm-dialog-title-font-size, 14px);
   line-height: var(--prizm-confirm-dialog-title-line-height, 20px);
   text-align: var(--prizm-confirm-dialog-title-align, center);
-  color: var(--prizm-confirm-dialog-title, var(--prizm-text-main));
+  color: var(--prizm-confirm-dialog-title, var(--prizm-v3-text-icon-primary));
   white-space: pre-line;
 }
 
@@ -16,7 +16,7 @@
   font-size: var(--prizm-confirm-dialog-description-font-size, 14px);
   line-height: var(--prizm-confirm-dialog-description-line-height, 20px);
   text-align: var(--prizm-confirm-dialog-description-align, center);
-  color: var(--prizm-confirm-dialog-description, var(--prizm-text-subscript));
+  color: var(--prizm-confirm-dialog-description, var(--prizm-v3-text-icon-secondary));
   white-space: pre-line;
 }
 
@@ -25,8 +25,8 @@
 }
 
 .host {
-  background: var(--prizm-confirm-dialog-background, var(--prizm-bg-body));
-  border: 1px solid var(--prizm-border-widget);
+  background: var(--prizm-confirm-dialog-background, var(--prizm-v3-background-fill-primary));
+  border: 1px solid var(--prizm-v3-background-stroke);
   border-radius: var(--prizm-confirm-dialog-border-radius, 2px);
   margin: var(--prizm-confirm-dialog-margin, 10px);
   pointer-events: all;
@@ -74,7 +74,7 @@
 }
 
 .footer {
-  border-top: 1px solid var(--prizm-border-widget);
+  border-top: 1px solid var(--prizm-v3-background-stroke);
   padding: var(--prizm-confirm-dialog-padding, 14px 16px);
   max-width: 100%;
 
