feat: update colors to sidebar #1135

--- a/libs/components/src/lib/components/dialogs/sidebar/sidebar.component.html
+++ b/libs/components/src/lib/components/dialogs/sidebar/sidebar.component.html
@@ -17,10 +17,12 @@
       </prizm-scrollbar>
       <button
         *ngIf="context.closeable"
-        [size]="16"
-        [interactive]="true"
+        [size]="'m'"
+        [icon]="'cancel-close'"
         (click)="closeSidebar()"
-        prizmInputIconButton="cancel-close"
+        appearanceType="ghost"
+        appearance="secondary"
+        prizmIconButton
       ></button>
     </ng-container>
   </div>
