feat: dialog close icon update

--- a/libs/components/src/lib/components/dialogs/dialog/dialog.component.html
+++ b/libs/components/src/lib/components/dialogs/dialog/dialog.component.html
@@ -6,10 +6,12 @@
       </div>
       <button
         *ngIf="context.closeable"
-        [size]="16"
-        [interactive]="true"
         (click)="close()"
-        prizmInputIconButton="cancel-close"
+        size="m"
+        appearanceType="ghost"
+        appearance="secondary"
+        prizmIconButton
+        icon="cancel-close"
       ></button>
     </div>
   </ng-container>
