--- a/libs/components/src/lib/components/dropdowns/dropdown-host/dropdown-host.component.less
+++ b/libs/components/src/lib/components/dropdowns/dropdown-host/dropdown-host.component.less
@@ -14,7 +14,7 @@
 .prizm-dropdown-host-modal {
   width: 100%;
   border-radius: var(--prizm-dropdrown-host-border-radius, 2px);
-  border: var(--prizm-dropdrown-host-border, 1px solid var(--prizm-border-widget));
-  background: var(--prizm-dropdrown-host-background, var(--prizm-bg-body));
-  box-shadow: var(--prizm-dropdrown-host-box-shadow, -8px 0px 32px var(--prizm-shadow));
+  border: var(--prizm-dropdrown-host-border, 1px solid var(--prizm-v3-background-stroke));
+  background: var(--prizm-dropdrown-host-background, var(--prizm-v3-background-fill-overlay));
+  box-shadow: var(--prizm-dropdrown-host-box-shadow, var(--prizm-v3-shadow-big-bottom));
 }
