--- a/libs/components/src/lib/components/error-page/error-page.component.less
+++ b/libs/components/src/lib/components/error-page/error-page.component.less
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
 
-  background-color: var(--prizm-bg-dashboard-forms);
+  background-color: var(--prizm-v3-background-fill-secondary);
   background-image: url('../../../../assets/error-page/bg.png');
   background-repeat: no-repeat;
   background-size: 130%;
@@ -18,7 +18,7 @@
   font-weight: 900;
   font-size: 64px;
 
-  color: var(--prizm-text-contrast);
+  color: var(--prizm-v3-text-icon-primary);
   margin-bottom: 24px;
 }
 
@@ -26,7 +26,7 @@
   font-weight: 800;
   font-size: 24px;
   line-height: 32px;
-  color: var(--prizm-text-main);
+  color: var(--prizm-v3-text-icon-primary);
 }
 
 .user-content {
@@ -38,7 +38,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: var(--prizm-text-main);
+  color: var(--prizm-v3-text-icon-secondary);
   &:empty {
     display: none;
   }
