fix: column settings paddings fix

--- a/libs/components/src/lib/components/column-settings/column-settings.component.less
+++ b/libs/components/src/lib/components/column-settings/column-settings.component.less
@@ -13,7 +13,7 @@
     font-style: var(--prizm-column-settings-header-font-style, normal);
     font-weight: var(--prizm-column-settings-header-font-weight, 600);
     font-size: var(--prizm-column-settings-header-font-size, var(--prizm-dialog-font-size, 14px));
-    color: var(--prizm-column-settings-header-text, var(--prizm-v3-text-icon-secondary));
+    color: var(--prizm-column-settings-header-text, var(--prizm-v3-text-icon-primary));
   }
 
   .title {
@@ -30,14 +30,15 @@
       justify-content: space-between;
       align-items: center;
       gap: 16px;
-      padding: var(--prizm-column-settings-header-padding, 14px 16px);
+      padding: var(--prizm-column-settings-header-padding, 0px 16px);
+      margin-top: 16px;
     }
 
     &-toggle {
       display: flex;
       align-items: center;
       gap: 8px;
-      padding: 14px 16px;
+      padding: 16px;
     }
   }
 
