--- a/libs/components/src/lib/components/listing-item/listing-item.component.less
+++ b/libs/components/src/lib/components/listing-item/listing-item.component.less
@@ -17,11 +17,16 @@
       font-size: 14px;
       font-weight: 400;
       line-height: 16px;
-      color: var(--prizm-v3-text-icon-primary);
+      color: var(--prizm-v3-text-icon-secondary);
     }
 
     &:not(.item-container__selected):not(.item-container__disabled):hover {
       background-color: var(--prizm-listing-item-row-hover, var(--prizm-v3-table-fill-row-hover));
+      color: var(--prizm-v3-text-icon-primary);
+
+      .title {
+        color: var(--prizm-v3-text-icon-primary);
+      }
     }
 
     &.item-container__selected:not(.item-container__disabled):has(.container-left:not(:empty)):hover {
