fix: placeholder color fix

--- a/libs/components/src/lib/components/dropdowns/select/input-select-item.component.less
+++ b/libs/components/src/lib/components/dropdowns/select/input-select-item.component.less
@@ -16,6 +16,7 @@
   display: flex;
   align-items: center;
   padding: var(--prizm-select-item-padding, 8px 16px);
+  min-height: 40px;
   background: var(--prizm-select-item-background, var(--prizm-v3-background-fill-overlay));
   cursor: pointer;
   font-weight: var(--prizm-select-item-font-weight, 400);
