--- a/libs/components/src/lib/components/input/common/styles/input.component.less
+++ b/libs/components/src/lib/components/input/common/styles/input.component.less
@@ -9,6 +9,10 @@
   color: var(--prizm-v3-text-icon-secondary);
   display: block;
   text-overflow: ellipsis;
+
+  &::placeholder {
+    color: var(--prizm-v3-text-icon-disable);
+  }
 }
 
 // In inner context
