--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -175,6 +175,7 @@
   &:focus-within {
     border-color: var(--prizm-v3-form-active);
     box-shadow: 0 0 0 2px var(--prizm-v3-background-stroke-focus);
+    position: relative;
 
     &:hover {
       border-color: var(--prizm-v3-form-active-hover);
