feat: skeleton colors update #1143

--- a/libs/components/src/styles/skeleton/skeleton.less
+++ b/libs/components/src/styles/skeleton/skeleton.less
@@ -10,7 +10,7 @@
   &:after {
     .fullsize();
     content: '';
-    background-color: var(--prizm-g3-g11);
+    background-color: var(--prizm-v3-status-none-secondary-default);
     animation: prizmSkeletonVibe ease-in-out 1s infinite alternate;
   }
 
