feat: update colors for widget #1150

--- a/libs/components/src/lib/components/grid/components/grid-item/grid-item.component.less
+++ b/libs/components/src/lib/components/grid/components/grid-item/grid-item.component.less
@@ -1,5 +1,5 @@
 :host {
   overflow: hidden;
 
-  background: var(--prizm-lite-b130-20);
+  background: var(--prizm-v3-status-info-secondary-default);
 }
