--- a/libs/components/src/lib/components/widget/widget.component.less
+++ b/libs/components/src/lib/components/widget/widget.component.less
@@ -1,6 +1,6 @@
 .body {
   padding: var(--prizm-widget-content-padding, 16px);
-  background-color: var(--prizm-widget-body-bg, var(--prizm-bg-body));
+  background-color: var(--prizm-widget-body-bg, var(--prizm-v3-background-fill-primary));
   flex: var(--prizm-widget-content-flex, 1 0 auto);
 }
 
@@ -11,7 +11,7 @@ prizm-card {
 .title {
   font-weight: var(--prizm-widget-title-weight, 600);
   font-size: var(--prizm-widget-title-size, 14px);
-  color: var(--prizm-widget-title-text, var(--prizm-text-contrast));
+  color: var(--prizm-widget-title-text, var(--prizm-v3-background-fill-primary));
 
   text-overflow: ellipsis;
   overflow: hidden;
@@ -24,23 +24,23 @@ prizm-card {
 .header {
   height: var(--prizm-widget-header-height, 48px);
   padding: var(--prizm-widget-header-padding, 14px 16px);
-  border-bottom: 1px solid var(--prizm-widget-header-border-color, var(--prizm-border-widget));
+  border-bottom: 1px solid var(--prizm-widget-header-border-color, var(--prizm-v3-background-stroke));
   display: var(--prizm-widget-header-display, flex);
   justify-content: space-between;
   align-items: center;
-  background-color: var(--prizm-widget-header-bg, var(--prizm-bg-header));
+  background-color: var(--prizm-widget-header-bg, var(--prizm-v3-background-fill-panel));
   gap: 16px;
   flex-shrink: 0;
 }
 
 .icons {
-  color: var(--prizm-widget-icons-color, var(--prizm-grey-g8-g6));
+  color: var(--prizm-widget-icons-color, var(--prizm-v3-button-secondary-solid-default));
   padding-left: 16px;
   display: flex;
   gap: var(--prizm-widget-icons-gap, 4px);
 
   &.divider {
-    border-left: 1px solid var(--prizm-widget-icons-border-left, var(--prizm-grey-g8-g6));
+    border-left: 1px solid var(--prizm-widget-icons-border-left, var(--prizm-v3-background-stroke));
   }
 
   &:empty {
@@ -53,6 +53,6 @@ prizm-icon {
   align-items: center;
 
   &:hover {
-    color: var(--prizm-index-plan);
+    color: var(--prizm-v3-button-primary-solid-hover);
   }
 }
