--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -251,7 +251,7 @@
 }
 
 .prizm-input-form-subtext {
-  padding-left: 16px;
+  padding: 0 16px;
   font-size: 10px;
   font-weight: 500;
   line-height: 22px;
