chore: update tokens for v3 themes

--- a/libs/theme/src/styles/theme/v3/index.less
+++ b/libs/theme/src/styles/theme/v3/index.less
@@ -3,6 +3,10 @@
 @import './dark';
 @import './dark-palette';
 
+:root {
+  .prizmV3Palette();
+}
+
 :root,
 *[data-prizm-theme='light'] {
   .prizmV3ThemeDefaultPalette();
