--- a/libs/theme/src/styles/theme/v3/default-palette.less
+++ b/libs/theme/src/styles/theme/v3/default-palette.less
@@ -1,142 +1,142 @@
 .prizmV3ThemeDefaultPalette() {
-  --prizm-v3-palette-0: #ffffff;
-  --prizm-v3-palette-1200: #0f1115;
-  --prizm-v3-palette-gray-h50: #f8f8f9;
-  --prizm-v3-palette-gray-100: #f3f4f5;
-  --prizm-v3-palette-gray-h150: #ebedef;
-  --prizm-v3-palette-gray-200: #e0e3e7;
-  --prizm-v3-palette-gray-h250: #d4d8dd;
-  --prizm-v3-palette-gray-300: #c3c7cf;
-  --prizm-v3-palette-gray-h350: #b7bcc6;
-  --prizm-v3-palette-gray-400: #a7acb8;
-  --prizm-v3-palette-gray-h450: #9ba1af;
-  --prizm-v3-palette-gray-500: #8a91a2;
-  --prizm-v3-palette-gray-h550: #7e8799;
-  --prizm-v3-palette-gray-600: #6e778c;
-  --prizm-v3-palette-gray-h650: #646d84;
-  --prizm-v3-palette-gray-700: #545f77;
-  --prizm-v3-palette-gray-h750: #4c556b;
-  --prizm-v3-palette-gray-800: #3f4759;
-  --prizm-v3-palette-gray-h850: #373e4e;
-  --prizm-v3-palette-gray-900: #2c313d;
-  --prizm-v3-palette-gray-h950: #292e3a;
-  --prizm-v3-palette-gray-1000: #252a35;
-  --prizm-v3-palette-gray-h1050: #222731;
-  --prizm-v3-palette-gray-1100: #1e222a;
-  --prizm-v3-palette-gray-h1150: #181b22;
-  --prizm-v3-palette-blue-h50: #f6f8ff;
-  --prizm-v3-palette-blue-100: #f0f4ff;
-  --prizm-v3-palette-blue-h150: #e7edff;
-  --prizm-v3-palette-blue-200: #d9e2ff;
-  --prizm-v3-palette-blue-h250: #cad6fe;
-  --prizm-v3-palette-blue-300: #b4c4fd;
-  --prizm-v3-palette-blue-h350: #a4b8fd;
-  --prizm-v3-palette-blue-400: #8da7fd;
-  --prizm-v3-palette-blue-h450: #7d9bfd;
-  --prizm-v3-palette-blue-500: #6689fd;
-  --prizm-v3-palette-blue-h550: #587df7;
-  --prizm-v3-palette-blue-600: #436cee;
-  --prizm-v3-palette-blue-h650: #3d63da;
-  --prizm-v3-palette-blue-700: #3555bd;
-  --prizm-v3-palette-blue-h750: #304daa;
-  --prizm-v3-palette-blue-800: #28408d;
-  --prizm-v3-palette-blue-h850: #23387c;
-  --prizm-v3-palette-blue-900: #1b2b62;
-  --prizm-v3-palette-blue-h950: #1a295d;
-  --prizm-v3-palette-blue-1000: #182556;
-  --prizm-v3-palette-blue-h1050: #16234f;
-  --prizm-v3-palette-blue-1100: #132045;
-  --prizm-v3-palette-blue-h1150: #111a32;
-  --prizm-v3-palette-green-h50: #f5faf2;
-  --prizm-v3-palette-green-100: #eff6ea;
-  --prizm-v3-palette-green-h150: #e6f0dd;
-  --prizm-v3-palette-green-200: #d8e7ca;
-  --prizm-v3-palette-green-h250: #c9deb6;
-  --prizm-v3-palette-green-300: #b2d198;
-  --prizm-v3-palette-green-h350: #a3c784;
-  --prizm-v3-palette-green-400: #8cb966;
-  --prizm-v3-palette-green-h450: #7caf52;
-  --prizm-v3-palette-green-500: #65a134;
-  --prizm-v3-palette-green-h550: #5a9727;
-  --prizm-v3-palette-green-600: #498714;
-  --prizm-v3-palette-green-h650: #3e7c13;
-  --prizm-v3-palette-green-700: #3b6a15;
-  --prizm-v3-palette-green-h750: #366015;
-  --prizm-v3-palette-green-800: #2f5014;
-  --prizm-v3-palette-green-h850: #2a4513;
-  --prizm-v3-palette-green-900: #223512;
-  --prizm-v3-palette-green-h950: #203212;
-  --prizm-v3-palette-green-1000: #1e2e11;
-  --prizm-v3-palette-green-h1050: #1c2b0f;
-  --prizm-v3-palette-green-1100: #1a260d;
-  --prizm-v3-palette-green-h1150: #161e10;
-  --prizm-v3-palette-yellow-h50: #fef8e3;
-  --prizm-v3-palette-yellow-100: #fdf3d1;
-  --prizm-v3-palette-yellow-h150: #fbecb3;
-  --prizm-v3-palette-yellow-200: #f9e187;
-  --prizm-v3-palette-yellow-h250: #f4d560;
-  --prizm-v3-palette-yellow-300: #edc225;
-  --prizm-v3-palette-yellow-h350: #e1b725;
-  --prizm-v3-palette-yellow-400: #cea724;
-  --prizm-v3-palette-yellow-h450: #c29d24;
-  --prizm-v3-palette-yellow-500: #af8d23;
-  --prizm-v3-palette-yellow-h550: #a28322;
-  --prizm-v3-palette-yellow-600: #8f7420;
-  --prizm-v3-palette-yellow-h650: #836a1e;
-  --prizm-v3-palette-yellow-700: #725b1c;
-  --prizm-v3-palette-yellow-h750: #67521a;
-  --prizm-v3-palette-yellow-800: #564518;
-  --prizm-v3-palette-yellow-h850: #4b3d17;
-  --prizm-v3-palette-yellow-900: #3b3015;
-  --prizm-v3-palette-yellow-h950: #382d14;
-  --prizm-v3-palette-yellow-1000: #342912;
-  --prizm-v3-palette-yellow-h1050: #302511;
-  --prizm-v3-palette-yellow-1100: #29200f;
-  --prizm-v3-palette-yellow-h1150: #1f1a11;
-  --prizm-v3-palette-orange-h50: #fef7ee;
-  --prizm-v3-palette-orange-100: #fdf1e2;
-  --prizm-v3-palette-orange-h150: #fbe9d1;
-  --prizm-v3-palette-orange-200: #f8deb8;
-  --prizm-v3-palette-orange-h250: #f6d09a;
-  --prizm-v3-palette-orange-300: #f2bc6d;
-  --prizm-v3-palette-orange-h350: #f0ae51;
-  --prizm-v3-palette-orange-400: #ec9827;
-  --prizm-v3-palette-orange-h450: #de8e27;
-  --prizm-v3-palette-orange-500: #c98027;
-  --prizm-v3-palette-orange-h550: #bb7725;
-  --prizm-v3-palette-orange-600: #a66923;
-  --prizm-v3-palette-orange-h650: #986122;
-  --prizm-v3-palette-orange-700: #835420;
-  --prizm-v3-palette-orange-h750: #764b1e;
-  --prizm-v3-palette-orange-800: #623e1b;
-  --prizm-v3-palette-orange-h850: #553619;
-  --prizm-v3-palette-orange-900: #422b16;
-  --prizm-v3-palette-orange-h950: #3e2915;
-  --prizm-v3-palette-orange-1000: #392513;
-  --prizm-v3-palette-orange-h1050: #352312;
-  --prizm-v3-palette-orange-1100: #2e1f11;
-  --prizm-v3-palette-orange-h1150: #221913;
-  --prizm-v3-palette-red-h50: #fdf7f5;
-  --prizm-v3-palette-red-100: #fcf1ee;
-  --prizm-v3-palette-red-h150: #fae9e4;
-  --prizm-v3-palette-red-200: #f7dcd4;
-  --prizm-v3-palette-red-h250: #f4cec3;
-  --prizm-v3-palette-red-300: #f0baa9;
-  --prizm-v3-palette-red-h350: #eeab99;
-  --prizm-v3-palette-red-400: #eb9481;
-  --prizm-v3-palette-red-h450: #e9836f;
-  --prizm-v3-palette-red-500: #e66a54;
-  --prizm-v3-palette-red-h550: #df5a46;
-  --prizm-v3-palette-red-600: #d44332;
-  --prizm-v3-palette-red-h650: #c13f2f;
-  --prizm-v3-palette-red-700: #a5382a;
-  --prizm-v3-palette-red-h750: #943427;
-  --prizm-v3-palette-red-800: #7a2d22;
-  --prizm-v3-palette-red-h850: #6a291e;
-  --prizm-v3-palette-red-900: #512218;
-  --prizm-v3-palette-red-h950: #4d2017;
-  --prizm-v3-palette-red-1000: #461e15;
-  --prizm-v3-palette-red-h1050: #401c14;
-  --prizm-v3-palette-red-1050: #371912;
-  --prizm-v3-palette-red-h1150: #271613;
+  --prizm-v3-palette-0: var(--prizm-v3-palette-0-light);
+  --prizm-v3-palette-1200: var(--prizm-v3-palette-1200-light);
+  --prizm-v3-palette-gray-h50: var(--prizm-v3-palette-gray-h50-light);
+  --prizm-v3-palette-gray-100: var(--prizm-v3-palette-gray-100-light);
+  --prizm-v3-palette-gray-h150: var(--prizm-v3-palette-gray-h150-light);
+  --prizm-v3-palette-gray-200: var(--prizm-v3-palette-gray-200-light);
+  --prizm-v3-palette-gray-h250: var(--prizm-v3-palette-gray-h250-light);
+  --prizm-v3-palette-gray-300: var(--prizm-v3-palette-gray-300-light);
+  --prizm-v3-palette-gray-h350: var(--prizm-v3-palette-gray-h350-light);
+  --prizm-v3-palette-gray-400: var(--prizm-v3-palette-gray-400-light);
+  --prizm-v3-palette-gray-h450: var(--prizm-v3-palette-gray-h450-light);
+  --prizm-v3-palette-gray-500: var(--prizm-v3-palette-gray-500-light);
+  --prizm-v3-palette-gray-h550: var(--prizm-v3-palette-gray-h550-light);
+  --prizm-v3-palette-gray-600: var(--prizm-v3-palette-gray-600-light);
+  --prizm-v3-palette-gray-h650: var(--prizm-v3-palette-gray-h650-light);
+  --prizm-v3-palette-gray-700: var(--prizm-v3-palette-gray-700-light);
+  --prizm-v3-palette-gray-h750: var(--prizm-v3-palette-gray-h750-light);
+  --prizm-v3-palette-gray-800: var(--prizm-v3-palette-gray-800-light);
+  --prizm-v3-palette-gray-h850: var(--prizm-v3-palette-gray-h850-light);
+  --prizm-v3-palette-gray-900: var(--prizm-v3-palette-gray-900-light);
+  --prizm-v3-palette-gray-h950: var(--prizm-v3-palette-gray-h950-light);
+  --prizm-v3-palette-gray-1000: var(--prizm-v3-palette-gray-1000-light);
+  --prizm-v3-palette-gray-h1050: var(--prizm-v3-palette-gray-h1050-light);
+  --prizm-v3-palette-gray-1100: var(--prizm-v3-palette-gray-1100-light);
+  --prizm-v3-palette-gray-h1150: var(--prizm-v3-palette-gray-h1150-light);
+  --prizm-v3-palette-blue-h50: var(--prizm-v3-palette-blue-h50-light);
+  --prizm-v3-palette-blue-100: var(--prizm-v3-palette-blue-100-light);
+  --prizm-v3-palette-blue-h150: var(--prizm-v3-palette-blue-h150-light);
+  --prizm-v3-palette-blue-200: var(--prizm-v3-palette-blue-200-light);
+  --prizm-v3-palette-blue-h250: var(--prizm-v3-palette-blue-h250-light);
+  --prizm-v3-palette-blue-300: var(--prizm-v3-palette-blue-300-light);
+  --prizm-v3-palette-blue-h350: var(--prizm-v3-palette-blue-h350-light);
+  --prizm-v3-palette-blue-400: var(--prizm-v3-palette-blue-400-light);
+  --prizm-v3-palette-blue-h450: var(--prizm-v3-palette-blue-h450-light);
+  --prizm-v3-palette-blue-500: var(--prizm-v3-palette-blue-500-light);
+  --prizm-v3-palette-blue-h550: var(--prizm-v3-palette-blue-h550-light);
+  --prizm-v3-palette-blue-600: var(--prizm-v3-palette-blue-600-light);
+  --prizm-v3-palette-blue-h650: var(--prizm-v3-palette-blue-h650-light);
+  --prizm-v3-palette-blue-700: var(--prizm-v3-palette-blue-700-light);
+  --prizm-v3-palette-blue-h750: var(--prizm-v3-palette-blue-h750-light);
+  --prizm-v3-palette-blue-800: var(--prizm-v3-palette-blue-800-light);
+  --prizm-v3-palette-blue-h850: var(--prizm-v3-palette-blue-h850-light);
+  --prizm-v3-palette-blue-900: var(--prizm-v3-palette-blue-900-light);
+  --prizm-v3-palette-blue-h950: var(--prizm-v3-palette-blue-h950-light);
+  --prizm-v3-palette-blue-1000: var(--prizm-v3-palette-blue-1000-light);
+  --prizm-v3-palette-blue-h1050: var(--prizm-v3-palette-blue-h1050-light);
+  --prizm-v3-palette-blue-1100: var(--prizm-v3-palette-blue-1100-light);
+  --prizm-v3-palette-blue-h1150: var(--prizm-v3-palette-blue-h1150-light);
+  --prizm-v3-palette-green-h50: var(--prizm-v3-palette-green-h50-light);
+  --prizm-v3-palette-green-100: var(--prizm-v3-palette-green-100-light);
+  --prizm-v3-palette-green-h150: var(--prizm-v3-palette-green-h150-light);
+  --prizm-v3-palette-green-200: var(--prizm-v3-palette-green-200-light);
+  --prizm-v3-palette-green-h250: var(--prizm-v3-palette-green-h250-light);
+  --prizm-v3-palette-green-300: var(--prizm-v3-palette-green-300-light);
+  --prizm-v3-palette-green-h350: var(--prizm-v3-palette-green-h350-light);
+  --prizm-v3-palette-green-400: var(--prizm-v3-palette-green-400-light);
+  --prizm-v3-palette-green-h450: var(--prizm-v3-palette-green-h450-light);
+  --prizm-v3-palette-green-500: var(--prizm-v3-palette-green-500-light);
+  --prizm-v3-palette-green-h550: var(--prizm-v3-palette-green-h550-light);
+  --prizm-v3-palette-green-600: var(--prizm-v3-palette-green-600-light);
+  --prizm-v3-palette-green-h650: var(--prizm-v3-palette-green-h650-light);
+  --prizm-v3-palette-green-700: var(--prizm-v3-palette-green-700-light);
+  --prizm-v3-palette-green-h750: var(--prizm-v3-palette-green-h750-light);
+  --prizm-v3-palette-green-800: var(--prizm-v3-palette-green-800-light);
+  --prizm-v3-palette-green-h850: var(--prizm-v3-palette-green-h850-light);
+  --prizm-v3-palette-green-900: var(--prizm-v3-palette-green-900-light);
+  --prizm-v3-palette-green-h950: var(--prizm-v3-palette-green-h950-light);
+  --prizm-v3-palette-green-1000: var(--prizm-v3-palette-green-1000-light);
+  --prizm-v3-palette-green-h1050: var(--prizm-v3-palette-green-h1050-light);
+  --prizm-v3-palette-green-1100: var(--prizm-v3-palette-green-1100-light);
+  --prizm-v3-palette-green-h1150: var(--prizm-v3-palette-green-h1150-light);
+  --prizm-v3-palette-yellow-h50: var(--prizm-v3-palette-yellow-h50-light);
+  --prizm-v3-palette-yellow-100: var(--prizm-v3-palette-yellow-100-light);
+  --prizm-v3-palette-yellow-h150: var(--prizm-v3-palette-yellow-h150-light);
+  --prizm-v3-palette-yellow-200: var(--prizm-v3-palette-yellow-200-light);
+  --prizm-v3-palette-yellow-h250: var(--prizm-v3-palette-yellow-h250-light);
+  --prizm-v3-palette-yellow-300: var(--prizm-v3-palette-yellow-300-light);
+  --prizm-v3-palette-yellow-h350: var(--prizm-v3-palette-yellow-h350-light);
+  --prizm-v3-palette-yellow-400: var(--prizm-v3-palette-yellow-400-light);
+  --prizm-v3-palette-yellow-h450: var(--prizm-v3-palette-yellow-h450-light);
+  --prizm-v3-palette-yellow-500: var(--prizm-v3-palette-yellow-500-light);
+  --prizm-v3-palette-yellow-h550: var(--prizm-v3-palette-yellow-h550-light);
+  --prizm-v3-palette-yellow-600: var(--prizm-v3-palette-yellow-600-light);
+  --prizm-v3-palette-yellow-h650: var(--prizm-v3-palette-yellow-h650-light);
+  --prizm-v3-palette-yellow-700: var(--prizm-v3-palette-yellow-700-light);
+  --prizm-v3-palette-yellow-h750: var(--prizm-v3-palette-yellow-h750-light);
+  --prizm-v3-palette-yellow-800: var(--prizm-v3-palette-yellow-800-light);
+  --prizm-v3-palette-yellow-h850: var(--prizm-v3-palette-yellow-h850-light);
+  --prizm-v3-palette-yellow-900: var(--prizm-v3-palette-yellow-900-light);
+  --prizm-v3-palette-yellow-h950: var(--prizm-v3-palette-yellow-h950-light);
+  --prizm-v3-palette-yellow-1000: var(--prizm-v3-palette-yellow-1000-light);
+  --prizm-v3-palette-yellow-h1050: var(--prizm-v3-palette-yellow-h1050-light);
+  --prizm-v3-palette-yellow-1100: var(--prizm-v3-palette-yellow-1100-light);
+  --prizm-v3-palette-yellow-h1150: var(--prizm-v3-palette-yellow-h1150-light);
+  --prizm-v3-palette-orange-h50: var(--prizm-v3-palette-orange-h50-light);
+  --prizm-v3-palette-orange-100: var(--prizm-v3-palette-orange-100-light);
+  --prizm-v3-palette-orange-h150: var(--prizm-v3-palette-orange-h150-light);
+  --prizm-v3-palette-orange-200: var(--prizm-v3-palette-orange-200-light);
+  --prizm-v3-palette-orange-h250: var(--prizm-v3-palette-orange-h250-light);
+  --prizm-v3-palette-orange-300: var(--prizm-v3-palette-orange-300-light);
+  --prizm-v3-palette-orange-h350: var(--prizm-v3-palette-orange-h350-light);
+  --prizm-v3-palette-orange-400: var(--prizm-v3-palette-orange-400-light);
+  --prizm-v3-palette-orange-h450: var(--prizm-v3-palette-orange-h450-light);
+  --prizm-v3-palette-orange-500: var(--prizm-v3-palette-orange-500-light);
+  --prizm-v3-palette-orange-h550: var(--prizm-v3-palette-orange-h550-light);
+  --prizm-v3-palette-orange-600: var(--prizm-v3-palette-orange-600-light);
+  --prizm-v3-palette-orange-h650: var(--prizm-v3-palette-orange-h650-light);
+  --prizm-v3-palette-orange-700: var(--prizm-v3-palette-orange-700-light);
+  --prizm-v3-palette-orange-h750: var(--prizm-v3-palette-orange-h750-light);
+  --prizm-v3-palette-orange-800: var(--prizm-v3-palette-orange-800-light);
+  --prizm-v3-palette-orange-h850: var(--prizm-v3-palette-orange-h850-light);
+  --prizm-v3-palette-orange-900: var(--prizm-v3-palette-orange-900-light);
+  --prizm-v3-palette-orange-h950: var(--prizm-v3-palette-orange-h950-light);
+  --prizm-v3-palette-orange-1000: var(--prizm-v3-palette-orange-1000-light);
+  --prizm-v3-palette-orange-h1050: var(--prizm-v3-palette-orange-h1050-light);
+  --prizm-v3-palette-orange-1100: var(--prizm-v3-palette-orange-1100-light);
+  --prizm-v3-palette-orange-h1150: var(--prizm-v3-palette-orange-h1150-light);
+  --prizm-v3-palette-red-h50: var(--prizm-v3-palette-red-h50-light);
+  --prizm-v3-palette-red-100: var(--prizm-v3-palette-red-100-light);
+  --prizm-v3-palette-red-h150: var(--prizm-v3-palette-red-h150-light);
+  --prizm-v3-palette-red-200: var(--prizm-v3-palette-red-200-light);
+  --prizm-v3-palette-red-h250: var(--prizm-v3-palette-red-h250-light);
+  --prizm-v3-palette-red-300: var(--prizm-v3-palette-red-300-light);
+  --prizm-v3-palette-red-h350: var(--prizm-v3-palette-red-h350-light);
+  --prizm-v3-palette-red-400: var(--prizm-v3-palette-red-400-light);
+  --prizm-v3-palette-red-h450: var(--prizm-v3-palette-red-h450-light);
+  --prizm-v3-palette-red-500: var(--prizm-v3-palette-red-500-light);
+  --prizm-v3-palette-red-h550: var(--prizm-v3-palette-red-h550-light);
+  --prizm-v3-palette-red-600: var(--prizm-v3-palette-red-600-light);
+  --prizm-v3-palette-red-h650: var(--prizm-v3-palette-red-h650-light);
+  --prizm-v3-palette-red-700: var(--prizm-v3-palette-red-700-light);
+  --prizm-v3-palette-red-h750: var(--prizm-v3-palette-red-h750-light);
+  --prizm-v3-palette-red-800: var(--prizm-v3-palette-red-800-light);
+  --prizm-v3-palette-red-h850: var(--prizm-v3-palette-red-h850-light);
+  --prizm-v3-palette-red-900: var(--prizm-v3-palette-red-900-light);
+  --prizm-v3-palette-red-h950: var(--prizm-v3-palette-red-h950-light);
+  --prizm-v3-palette-red-1000: var(--prizm-v3-palette-red-1000-light);
+  --prizm-v3-palette-red-h1050: var(--prizm-v3-palette-red-h1050-light);
+  --prizm-v3-palette-red-1050: var(--prizm-v3-palette-red-1050-light);
+  --prizm-v3-palette-red-h1150: var(--prizm-v3-palette-red-h1150-light);
 }
