--- a/apps/doc/src/app/components/splitter/examples/areas-control-display-none/areas-control-display-none.component.html
+++ b/apps/doc/src/app/components/splitter/examples/areas-control-display-none/areas-control-display-none.component.html
@@ -1,55 +1,59 @@
 <prizm-splitter [ngStyle]="{ height: '300px' }">
   <prizm-splitter-area [size]="area1Size">
-    <div class="area area--1">
-      <h3>area 1</h3>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut officiis eum maxime voluptas libero
-      provident, obcaecati tempore aliquam consequatur neque iste earum. Quod molestiae doloribus, vel nulla
-      recusandae impedit beatae. Nemo doloremque inventore harum, pariatur dignissimos molestias id? Sint
-      quisquam hic officiis commodi pariatur quod iure recusandae molestias, corporis nam in voluptates
-      excepturi omnis saepe suscipit nihil at quos officia fuga rem quaerat ratione nesciunt qui! Corporis
-      quisquam esse eligendi at nam voluptatibus, enim molestias omnis? Sunt voluptatibus laborum quia id
-      consequuntur, in delectus repellat impedit suscipit saepe facilis facere libero rem voluptatem neque
-      officiis, nihil dolorum quisquam aperiam blanditiis.
-    </div>
+    <prizm-widget title="area 1">
+      <div class="area area--1">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut officiis eum maxime voluptas libero
+        provident, obcaecati tempore aliquam consequatur neque iste earum. Quod molestiae doloribus, vel nulla
+        recusandae impedit beatae. Nemo doloremque inventore harum, pariatur dignissimos molestias id? Sint
+        quisquam hic officiis commodi pariatur quod iure recusandae molestias, corporis nam in voluptates
+        excepturi omnis saepe suscipit nihil at quos officia fuga rem quaerat ratione nesciunt qui! Corporis
+        quisquam esse eligendi at nam voluptatibus, enim molestias omnis? Sunt voluptatibus laborum quia id
+        consequuntur, in delectus repellat impedit suscipit saepe facilis facere libero rem voluptatem neque
+        officiis, nihil dolorum quisquam aperiam blanditiis.
+      </div>
+    </prizm-widget>
   </prizm-splitter-area>
   <prizm-splitter-area [size]="area2Size">
-    <div class="area area--2">
-      <h3>area 2</h3>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut officiis eum maxime voluptas libero
-      provident, obcaecati tempore aliquam consequatur neque iste earum. Quod molestiae doloribus, vel nulla
-      recusandae impedit beatae. Nemo doloremque inventore harum, pariatur dignissimos molestias id? Sint
-      quisquam hic officiis commodi pariatur quod iure recusandae molestias, corporis nam in voluptates
-      excepturi omnis saepe suscipit nihil at quos officia fuga rem quaerat ratione nesciunt qui! Corporis
-      quisquam esse eligendi at nam voluptatibus, enim molestias omnis? Sunt voluptatibus laborum quia id
-      consequuntur, in delectus repellat impedit suscipit saepe facilis facere libero rem voluptatem neque
-      officiis, nihil dolorum quisquam aperiam blanditiis.
-    </div>
+    <prizm-widget title="area 2">
+      <div class="area area--2">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut officiis eum maxime voluptas libero
+        provident, obcaecati tempore aliquam consequatur neque iste earum. Quod molestiae doloribus, vel nulla
+        recusandae impedit beatae. Nemo doloremque inventore harum, pariatur dignissimos molestias id? Sint
+        quisquam hic officiis commodi pariatur quod iure recusandae molestias, corporis nam in voluptates
+        excepturi omnis saepe suscipit nihil at quos officia fuga rem quaerat ratione nesciunt qui! Corporis
+        quisquam esse eligendi at nam voluptatibus, enim molestias omnis? Sunt voluptatibus laborum quia id
+        consequuntur, in delectus repellat impedit suscipit saepe facilis facere libero rem voluptatem neque
+        officiis, nihil dolorum quisquam aperiam blanditiis.
+      </div>
+    </prizm-widget>
   </prizm-splitter-area>
   <prizm-splitter-area [size]="area3Size">
-    <div class="area area--3">
-      <h3>area 3</h3>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut officiis eum maxime voluptas libero
-      provident, obcaecati tempore aliquam consequatur neque iste earum. Quod molestiae doloribus, vel nulla
-      recusandae impedit beatae. Nemo doloremque inventore harum, pariatur dignissimos molestias id? Sint
-      quisquam hic officiis commodi pariatur quod iure recusandae molestias, corporis nam in voluptates
-      excepturi omnis saepe suscipit nihil at quos officia fuga rem quaerat ratione nesciunt qui! Corporis
-      quisquam esse eligendi at nam voluptatibus, enim molestias omnis? Sunt voluptatibus laborum quia id
-      consequuntur, in delectus repellat impedit suscipit saepe facilis facere libero rem voluptatem neque
-      officiis, nihil dolorum quisquam aperiam blanditiis.
-    </div>
+    <prizm-widget title="area 3">
+      <div class="area area--3">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut officiis eum maxime voluptas libero
+        provident, obcaecati tempore aliquam consequatur neque iste earum. Quod molestiae doloribus, vel nulla
+        recusandae impedit beatae. Nemo doloremque inventore harum, pariatur dignissimos molestias id? Sint
+        quisquam hic officiis commodi pariatur quod iure recusandae molestias, corporis nam in voluptates
+        excepturi omnis saepe suscipit nihil at quos officia fuga rem quaerat ratione nesciunt qui! Corporis
+        quisquam esse eligendi at nam voluptatibus, enim molestias omnis? Sunt voluptatibus laborum quia id
+        consequuntur, in delectus repellat impedit suscipit saepe facilis facere libero rem voluptatem neque
+        officiis, nihil dolorum quisquam aperiam blanditiis.
+      </div>
+    </prizm-widget>
   </prizm-splitter-area>
   <prizm-splitter-area [size]="area4Size">
-    <div class="area area--4">
-      <h3>area 4</h3>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut officiis eum maxime voluptas libero
-      provident, obcaecati tempore aliquam consequatur neque iste earum. Quod molestiae doloribus, vel nulla
-      recusandae impedit beatae. Nemo doloremque inventore harum, pariatur dignissimos molestias id? Sint
-      quisquam hic officiis commodi pariatur quod iure recusandae molestias, corporis nam in voluptates
-      excepturi omnis saepe suscipit nihil at quos officia fuga rem quaerat ratione nesciunt qui! Corporis
-      quisquam esse eligendi at nam voluptatibus, enim molestias omnis? Sunt voluptatibus laborum quia id
-      consequuntur, in delectus repellat impedit suscipit saepe facilis facere libero rem voluptatem neque
-      officiis, nihil dolorum quisquam aperiam blanditiis.
-    </div>
+    <prizm-widget title="area 4">
+      <div class="area area--4">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut officiis eum maxime voluptas libero
+        provident, obcaecati tempore aliquam consequatur neque iste earum. Quod molestiae doloribus, vel nulla
+        recusandae impedit beatae. Nemo doloremque inventore harum, pariatur dignissimos molestias id? Sint
+        quisquam hic officiis commodi pariatur quod iure recusandae molestias, corporis nam in voluptates
+        excepturi omnis saepe suscipit nihil at quos officia fuga rem quaerat ratione nesciunt qui! Corporis
+        quisquam esse eligendi at nam voluptatibus, enim molestias omnis? Sunt voluptatibus laborum quia id
+        consequuntur, in delectus repellat impedit suscipit saepe facilis facere libero rem voluptatem neque
+        officiis, nihil dolorum quisquam aperiam blanditiis.
+      </div>
+    </prizm-widget>
   </prizm-splitter-area>
 </prizm-splitter>
 <br />
