feat: borders for cells with inputs and status #1093

--- a/apps/doc/src/app/components/table/examples/table-editable-col-example/table-editable-col-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-editable-col-example/table-editable-col-example.component.html
@@ -24,7 +24,7 @@
         prizmTr
       >
         <td class="format__number" *prizmCell="'code'" prizmTd>{{ item.code | spaceNumber : '0.0-0' }}</td>
-        <td class="row_editable" *prizmCell="'name'" prizmTd>
+        <td class="row_editable" *prizmCell="'name'" [status]="item.status ?? 'default'" prizmTd>
           <input
             [value]="item.name"
             [readOnly]="!(currentEditableProduct?.product === item && currentEditableProduct?.key === 'name')"
