--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -111,7 +111,7 @@
   }
 
   &:hover {
-    border-color: var(--prizm-v3-form-active);
+    border-color: var(--prizm-v3-form-stroke-hover);
   }
 
   &__first {
