--- a/libs/components/src/lib/components/table/td/td.component.less
+++ b/libs/components/src/lib/components/table/td/td.component.less
@@ -31,19 +31,45 @@
   background: inherit;
   color: inherit;
 
+  &:has([prizmInput]) {
+    padding: 0;
+  }
+
   &[status='success'] {
     background: var(--prizm-v3-status-success-secondary-default);
+
+    &:has([prizmInput]:not(:focus)):hover {
+      box-shadow: 0 0 0 1px var(--prizm-v3-status-success-primary-default) inset;
+    }
   }
+
   &[status='default'] {
     background: inherit;
+
+    &:has([prizmInput]:not(:focus)):hover {
+      box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-hover) inset;
+    }
   }
 
   &[status='warning'] {
     background: var(--prizm-v3-status-warning-secondary-default);
+
+    &:has([prizmInput]:not(:focus)):hover {
+      box-shadow: 0 0 0 1px var(--prizm-v3-status-warning-primary-default) inset;
+    }
   }
 
   &[status='danger'] {
     background: var(--prizm-v3-status-alarm-secondary-default);
+
+    &:has([prizmInput]:not(:focus)):hover {
+      box-shadow: 0 0 0 1px var(--prizm-v3-status-alarm-primary-default) inset;
+    }
+  }
+
+  &:has([prizmInput]:focus) {
+    background-color: var(--prizm-v3-background-fill-primary);
+    box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-active) inset;
   }
 }
 
