--- a/libs/components/src/lib/components/table/tr/tr.component.less
+++ b/libs/components/src/lib/components/table/tr/tr.component.less
@@ -5,7 +5,7 @@
 
   background: var(--prizm-table-row-background, var(--prizm-v3-background-fill-primary));
 
-  &:nth-child(odd) {
+  &:nth-child(even) {
     background: var(--prizm-table-row-odd-background, var(--prizm-v3-table-fill-row-zebra_default));
   }
 
