feat: add shadow to palete

--- a/libs/theme/src/styles/theme/v3/dark-palette.less
+++ b/libs/theme/src/styles/theme/v3/dark-palette.less
@@ -1,4 +1,5 @@
 .prizmV3ThemeDarkPalette() {
+  --prizm-v3-shadow-color: var(--prizm-v3-shadow-color-dark);
   --prizm-v3-palette-0: var(--prizm-v3-palette-0-dark);
   --prizm-v3-palette-1200: var(--prizm-v3-palette-1200-dark);
   --prizm-v3-palette-gray-h50: var(--prizm-v3-palette-gray-h50-dark);
