--- a/libs/theme/src/styles/theme/v3/palette.less
+++ b/libs/theme/src/styles/theme/v3/palette.less
@@ -1,4 +1,6 @@
 .prizmV3Palette() {
+  --prizm-v3-palette-shadow-dark: rgba(0, 0, 0, 0.5);
+  --prizm-v3-palette-shadow-light: rgba(191, 198, 215, 0.5);
   --prizm-v3-palette-0-light: #ffffff;
   --prizm-v3-palette-1200-light: #0f1115;
   --prizm-v3-palette-gray-h50-light: #f8f8f9;
