--- a/libs/theme/src/styles/theme/v3/default.less
+++ b/libs/theme/src/styles/theme/v3/default.less
@@ -99,8 +99,7 @@ Link - https://www.figma.com/file/lR03OmslN1ngsyglw65gKK/%F0%9F%8E%A8-Light-them
   --prizm-v3-chart-axis-area-active: #436cee33;
   --prizm-v3-token: #ffffff;
   --prizm-v3-chart-fill-blanket: #8a91a233;
-
-  --prizm-v3-shadow-color: rgba(191, 198, 215, 0.5);
+  --prizm-v3-shadow-color: var(--prizm-v3-palette-shadow-light);
   --prizm-v3-shadow-big-top: 0px -8px 32px 0px var(--prizm-v3-shadow-color);
   --prizm-v3-shadow-big-right: 8px 0px 32px 0px var(--prizm-v3-shadow-color);
   --prizm-v3-shadow-big-left: -8px 0px 32px 0px var(--prizm-v3-shadow-color);
