--- a/libs/theme/src/styles/theme/v3/index.less
+++ b/libs/theme/src/styles/theme/v3/index.less
@@ -1,7 +1,7 @@
-@import './default';
-@import './default-palette';
-@import './dark';
-@import './dark-palette';
+@import 'default';
+@import 'default-palette';
+@import 'dark';
+@import 'dark-palette';
 
 :root,
 *[data-prizm-theme='light'] {
