feat: navigation-menu colors update #1151

--- a/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-basic-example/navigation-menu-basic-example.component.less
+++ b/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-basic-example/navigation-menu-basic-example.component.less
@@ -1,14 +1,17 @@
 :host {
-  color: var(--prizm-text-main);
-
   .multiple-menu {
     display: flex;
     height: 900px;
     gap: 30px;
+    background-color: var(--prizm-v3-background-fill-secondary);
   }
 
   section {
     width: 500px;
     height: 100%;
+
+    & > button {
+      margin-top: 16px;
+    }
   }
 }
