--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-group/prizm-navigation-menu-group.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-group/prizm-navigation-menu-group.component.html
@@ -1,4 +1,4 @@
-<div class="prizm-navigation-menu-group">
+<div class="prizm-navigation-menu-group" [class.prizm-navigation-menu-group_expanded]="groupIsExpanded">
   <prizm-accordion *ngIf="!hideGroupAppearance; else noGroupAppearanceTemplate">
     <prizm-accordion-item
       [icon]="$any(icon)"
