--- a/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-groups-example/navigation-menu-groups-example.component.less
+++ b/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-groups-example/navigation-menu-groups-example.component.less
@@ -1,5 +1,6 @@
 :host {
-  color: var(--prizm-text-main);
+  color: var(--prizm-v3-text-icon-secondary);
+  background-color: var(--prizm-v3-background-fill-secondary);
 
   .layout {
     --prizm-widget-header-padding: 3px 16px;
