--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-group/prizm-navigation-menu-group.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-group/prizm-navigation-menu-group.component.less
@@ -6,16 +6,25 @@
 
   .prizm-navigation-menu-group {
     --prizm-empty-message__padding: 16px 32px;
+    border-bottom: 1px solid var(--prizm-v3-background-stroke);
+
+    &_expanded:has(.empty-message) {
+      border-bottom: none;
+    }
 
     height: 100%;
 
     ::ng-deep {
+      .prizm-navigation-menu-search,
+      .prizm-navigation-menu-toolbar_border {
+        border-bottom: none;
+      }
       prizm-accordion {
         border: none;
 
         .accordion__content {
           padding: 0 !important;
-          background: var(--prizm-grey-g11-g3);
+          background: var(--prizm-v3-background-fill-primary);
           cursor: default;
         }
 
@@ -38,24 +47,16 @@
           padding: var(--prizm-navigation-menu__item-padding);
           padding-left: 12px;
           border-left: 4px solid transparent;
-          border-bottom: 1px solid var(--prizm-grey-g10-g4);
-          background: var(--prizm-grey-g11-g3);
-
-          &:focus,
-          &:hover {
-            background: var(--prizm-index-lock);
-          }
         }
       }
     }
 
     &__no-items-content {
-      background: var(--prizm-grey-g11-g3);
+      background: var(--prizm-v3-background-fill-primary);
       height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      border-bottom: 1px solid var(--prizm-grey-g10-g4);
     }
   }
 
@@ -74,14 +75,14 @@
     &__main {
       font-weight: 600;
 
-      color: var(--prizm-text-contrast);
+      color: var(--prizm-v3-text-icon-primary);
       text-align: center;
     }
 
     &__sub {
       font-weight: 400;
 
-      color: var(--prizm-text-subscript);
+      color: var(--prizm-v3-text-icon-secondary);
     }
   }
 }
