--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.less
@@ -1,35 +1,24 @@
-.prizm-navigation-menu-toolbar {
-  height: var(--prizm-navigation-menu__item-height);
-  padding: var(--prizm-navigation-menu__item-padding);
-  background: var(--prizm-grey-g11-g3);
+:host {
+  .prizm-navigation-menu-toolbar {
+    min-height: var(--prizm-navigation-menu__item-height);
+    padding: var(--prizm-navigation-menu__item-padding);
 
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  border-bottom: 1px solid var(--prizm-grey-g10-g4);
-  overflow: hidden;
-
-  .instruments {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-
-    button[prizmIconButton] {
-      margin: 0px 1px;
+    &_border {
+      border-bottom: 1px solid var(--prizm-v3-background-stroke);
     }
 
-    &__btn {
-      &:hover,
-      &_active {
-        ::ng-deep prizm-wrapper {
-          color: var(--prizm-primary);
-          background: transparent;
-        }
-      }
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
 
-      &._focused {
-        box-shadow: 0 0 0 2px var(--prizm-navigation-menu__focus-color);
+    .instruments {
+      display: flex;
+      align-items: center;
+      margin-left: auto;
+
+      button[prizmIconButton] {
+        margin: 0px 1px;
       }
     }
   }
