--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.less
@@ -1,12 +1,12 @@
 .prizm-navigation-menu {
   --prizm-navigation-menu__item-padding: 0 8px 0 4px;
   --prizm-navigation-menu__item-height: 40px;
-  --prizm-navigation-menu__focus-color: var(--prizm-lite-b130-20);
 
   display: grid;
   grid-template-rows: min-content;
   height: 100%;
-  background: var(--prizm-grey-g11-g3);
+  background: var(--prizm-v3-background-fill-primary);
+  border-right: 1px solid var(--prizm-v3-background-stroke);
 
   &__header {
     overflow: hidden;
@@ -23,7 +23,7 @@
       justify-content: space-between;
       padding: var(--prizm-navigation-menu__item-padding);
       height: var(--prizm-navigation-menu__item-height);
-      border-bottom: 1px solid var(--prizm-grey-g10-g4);
+      border-bottom: 1px solid var(--prizm-v3-background-stroke);
     }
 
     &__toolbar {
@@ -36,7 +36,7 @@
       font-weight: 600;
       padding: 0 8px;
 
-      color: var(--prizm-text-contrast);
+      color: var(--prizm-v3-text-icon-primary);
 
       white-space: nowrap;
       overflow: hidden;
@@ -49,18 +49,6 @@
 
       button[prizmIconButton] {
         margin: 0px 1px;
-
-        &:hover,
-        &._active {
-          ::ng-deep prizm-wrapper.z-wrapper {
-            color: var(--prizm-primary);
-            background: transparent;
-          }
-        }
-
-        &._focused {
-          box-shadow: 0 0 0 2px var(--prizm-navigation-menu__focus-color);
-        }
       }
     }
   }
@@ -86,8 +74,6 @@
     &__bottom {
       flex-shrink: 1;
       overflow: hidden;
-      position: relative; // required for shadow
-      box-shadow: 0px -2px 8px var(--prizm-shadow);
     }
   }
 }
@@ -99,9 +85,4 @@
 
 &::-webkit-scrollbar-track {
   background: transparent;
-}
-
-&::-webkit-scrollbar-thumb {
-  background-color: var(--prizm-grey-g10-g4);
-  border-radius: 4px;
 }
