fix: track by example fix, borders stle fix #1093

--- a/apps/doc/src/app/components/table/examples/table-track-by-example/table-track-by-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-track-by-example/table-track-by-example.component.html
@@ -6,7 +6,7 @@
         <th prizmTh>Наименование</th>
         <th prizmTh>Категория</th>
         <th prizmTh>Количество</th>
-        <th></th>
+        <th prizmTh></th>
       </tr>
     </thead>
 
@@ -33,7 +33,7 @@
           <td prizmTd>
             {{ item.count }}
           </td>
-          <td>{{ item.active }}</td>
+          <td prizmTd>{{ item.active }}</td>
         </tr>
       </ng-container>
     </tbody>
