--- a/libs/components/src/lib/components/table/td/td.component.less
+++ b/libs/components/src/lib/components/table/td/td.component.less
@@ -91,8 +91,13 @@
 }
 
 :host-context([border-style='horizontal']) {
-  border-right: none;
-  border-left: none;
+  &:not(:first-child) {
+    border-left: none;
+  }
+
+  &:not(:last-child) {
+    border-right: none;
+  }
 }
 
 :host-context([data-size='s']) {
