fix: switcher active state colors #1168

--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
@@ -1,12 +1,12 @@
 <button
   class="switcher"
   *ngIf="data?.title; else iconBtn"
-  [class.switcher_active]="isActive"
   [disabled]="isDisabled"
   [icon]="$any(data?.icon)"
   [size]="size"
   [appearanceType]="data?.appearanceType ?? 'ghost'"
   [appearance]="data?.appearance ?? 'secondary'"
+  [pseudoPressed]="isActive"
   prizmButton
 >
   {{ data?.title }}
@@ -15,7 +15,7 @@
 <ng-template #iconBtn>
   <button
     class="switcher switcher_icon"
-    [class.switcher_active]="isActive"
+    [pseudoPressed]="isActive"
     [disabled]="isDisabled"
     [icon]="$any(data?.icon)"
     [size]="size"
