fix: cron font color fix #1124

--- a/libs/components/src/lib/components/cron/cron.component.less
+++ b/libs/components/src/lib/components/cron/cron.component.less
@@ -1,5 +1,9 @@
 @import '../../../styles/ui-local';
 
+:host {
+  color: var(--prizm-v3-text-icon-secondary);
+}
+
 .block {
   border: 1px solid var(--prizm-v3-background-stroke);
   border-radius: 2px;
