--- a/libs/components/src/lib/components/stepper/stepper.component.less
+++ b/libs/components/src/lib/components/stepper/stepper.component.less
@@ -1,8 +1,9 @@
 :host {
   border-radius: 2px;
-  border: 1px solid var(--prizm-border-widget);
+  border: 1px solid var(--prizm-v3-background-stroke);
   display: flex;
   flex-direction: column;
+  background-color: var(--prizm-v3-background-fill-primary);
 }
 
 .header {
@@ -10,7 +11,9 @@
   line-height: 20px;
   font-weight: 600;
   padding: 14px 16px;
-  border-bottom: 1px solid var(--prizm-border-widget);
+  border-bottom: 1px solid var(--prizm-v3-background-stroke);
+  color: var(--prizm-v3-text-icon-primary);
+  background-color: var(--prizm-v3-background-fill-panel);
 }
 
 .wrapper {
@@ -23,7 +26,7 @@
 }
 
 .footer {
-  border-top: 1px solid var(--prizm-border-widget);
+  border-top: 1px solid var(--prizm-v3-background-stroke);
   padding: 16px;
 }
 
