feat: add styles for search input

--- a/libs/components/src/lib/components/table/th/th.style.less
+++ b/libs/components/src/lib/components/table/th/th.style.less
@@ -26,6 +26,11 @@
     border-left: none;
   }
 
+  &:has([prizmInput]:focus) {
+    background-color: var(--prizm-v3-background-fill-primary);
+    box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-active) inset;
+  }
+
   .resize-bar {
     height: 100%;
     width: 4px;
