--- a/libs/components/src/lib/components/cron/cron.component.less
+++ b/libs/components/src/lib/components/cron/cron.component.less
@@ -42,6 +42,7 @@
   &.title {
     align-items: center;
     justify-content: space-between;
+    color: var(--prizm-v3-text-icon-primary);
   }
 }
 
