feat: toast colors update to v3 #1177

--- a/apps/doc/src/app/components/toast/toast.component.html
+++ b/apps/doc/src/app/components/toast/toast.component.html
@@ -19,6 +19,10 @@
       <prizm-message-danger-example></prizm-message-danger-example>
     </prizm-doc-example>
 
+    <prizm-doc-example id="defult-toast" [content]="exampleMessageNone" heading="None Status Message">
+      <prizm-message-none-example></prizm-message-none-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="toast-platform" [content]="exampleToast" heading="Platform Toast">
       <prizm-toast-example></prizm-toast-example>
     </prizm-doc-example>
