fix: add widget content color

--- a/libs/components/src/lib/components/widget/widget.component.less
+++ b/libs/components/src/lib/components/widget/widget.component.less
@@ -1,6 +1,7 @@
 .body {
   padding: var(--prizm-widget-content-padding, 16px);
   background-color: var(--prizm-widget-body-bg, var(--prizm-v3-background-fill-primary));
+  color: var(--prizm-v3-text-icon-secondary);
   flex: var(--prizm-widget-content-flex, 1 0 auto);
 }
 
