fix: style pathes

--- a/libs/components/src/lib/components/cron/cron.component.less
+++ b/libs/components/src/lib/components/cron/cron.component.less
@@ -1,4 +1,4 @@
-@import '../../../styles/ui-local';
+@import '../../../styles/ui-local.less';
 
 :host {
   color: var(--prizm-v3-text-icon-secondary);
