--- a/libs/components/src/lib/components/progress/progress-circle/progress-circle.component.less
+++ b/libs/components/src/lib/components/progress/progress-circle/progress-circle.component.less
@@ -1,4 +1,4 @@
-@import '../../../../styles/ui-local';
+@import '../../../../styles/ui-local.less';
 
 /* Safari doesn't support rem units inside svg (but supports em units) */
 @width: {
