--- a/libs/theme/src/styles/styles.less
+++ b/libs/theme/src/styles/styles.less
@@ -1,6 +1,6 @@
-@import 'font';
-@import 'typography/typography';
-@import 'theme/index';
+@import 'font.less';
+@import 'typography/typography.less';
+@import 'theme/index.less';
 
 * {
   box-sizing: border-box;
