--- a/libs/theme/src/styles/theme/v2/index.less
+++ b/libs/theme/src/styles/theme/v2/index.less
@@ -1,7 +1,7 @@
-@import 'default';
-@import 'dark';
-@import 'table';
-@import 'variables';
+@import 'default.less';
+@import 'dark.less';
+@import 'table.less';
+@import 'variables.less';
 
 :root,
 *[data-prizm-theme='light'] {
