fix: header color fix for sidebar and dialog

--- a/libs/components/src/lib/components/dialogs/dialog/dialog.component.less
+++ b/libs/components/src/lib/components/dialogs/dialog/dialog.component.less
@@ -28,6 +28,8 @@
   font-style: var(--prizm-dialog-header-font-style, normal);
   font-weight: var(--prizm-dialog-header-font-weight, 600);
   font-size: var(--prizm-dialog-header-font-size, var(--prizm-dialog-font-size, 14px));
+
+  background-color: var(--prizm-v3-background-fill-panel);
   color: var(--prizm-dialog-header-text, var(--prizm-v3-text-icon-primary));
 
   .title {
