--- a/libs/components/src/lib/components/dialogs/sidebar/sidebar.component.less
+++ b/libs/components/src/lib/components/dialogs/sidebar/sidebar.component.less
@@ -20,6 +20,8 @@
   font-style: var(--prizm-sidebar-header-font-style, normal);
   font-weight: var(--prizm-sidebar-header-font-size, 600);
   font-size: var(--prizm-sidebar-header-font-size, 14px);
+
+  background-color: var(--prizm-v3-background-fill-panel);
   color: var(--prizm-sidebar-header-color, var(--prizm-v3-text-icon-primary));
 
   prizm-scrollbar {
