feat: none status toast renamed to secondary

--- a/libs/components/src/lib/components/toast/toast/toast.component.less
+++ b/libs/components/src/lib/components/toast/toast/toast.component.less
@@ -68,7 +68,7 @@
     background: var(--prizm-v3-status-alarm-secondary-default);
   }
 
-  &.none {
+  &.secondary {
     border-color: var(--prizm-v3-status-none-primary-default);
     background: var(--prizm-v3-status-none-secondary-default);
   }
