--- a/apps/doc/src/app/components/toast/toast.component.html
+++ b/apps/doc/src/app/components/toast/toast.component.html
@@ -19,8 +19,12 @@
       <prizm-message-danger-example></prizm-message-danger-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="defult-toast" [content]="exampleMessageNone" heading="None Status Message">
-      <prizm-message-none-example></prizm-message-none-example>
+    <prizm-doc-example
+      id="defult-toast"
+      [content]="exampleMessageSecondary"
+      heading="Secondary Status Message"
+    >
+      <prizm-message-secondary-example></prizm-message-secondary-example>
     </prizm-doc-example>
 
     <prizm-doc-example id="toast-platform" [content]="exampleToast" heading="Platform Toast">
