fix: navigation paddings fix

--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-search/prizm-navigation-menu-search.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-search/prizm-navigation-menu-search.component.less
@@ -1,12 +1,9 @@
 .prizm-navigation-menu-search {
   display: flex;
   align-items: center;
-  height: var(--prizm-navigation-menu__item-height);
-  padding: var(--prizm-navigation-menu__item-padding);
+  padding: 0px 16px 8px;
 
   &__input {
     width: 100%;
   }
-
-  border-bottom: 1px solid var(--prizm-v3-background-stroke);
 }
