--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.less
@@ -1,11 +1,6 @@
 :host {
   .prizm-navigation-menu-toolbar {
-    min-height: var(--prizm-navigation-menu__item-height);
-    padding: var(--prizm-navigation-menu__item-padding);
-
-    &_border {
-      border-bottom: 1px solid var(--prizm-v3-background-stroke);
-    }
+    padding: var(--prizm-navigation-menu__item-padding, 8px 16px);
 
     display: flex;
     justify-content: space-between;
