--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.less
@@ -1,5 +1,5 @@
 .prizm-navigation-menu {
-  --prizm-navigation-menu__item-padding: 0 8px 0 4px;
+  --prizm-navigation-menu__item-padding: 8px 16px;
   --prizm-navigation-menu__item-height: 40px;
 
   display: grid;
@@ -10,6 +10,7 @@
 
   &__header {
     overflow: hidden;
+    border-bottom: 1px solid var(--prizm-v3-background-stroke);
   }
 
   &__content {
