--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.html
@@ -1,9 +1,5 @@
 <ng-container *prizmLet="toolbarService.searchVisible$ | async as searchVisible">
-  <div
-    class="prizm-navigation-menu-toolbar"
-    *ngIf="toolbarIsVisible"
-    [class.prizm-navigation-menu-toolbar_border]="!searchVisible"
-  >
+  <div class="prizm-navigation-menu-toolbar" *ngIf="toolbarIsVisible">
     <div class="instruments">
       <ng-container *ngTemplateOutlet="toolbarExtraTemplate"></ng-container>
 
