fix: check box extra margin #1189

--- a/apps/doc/src/app/components/checkbox/checkbox-example.component.html
+++ b/apps/doc/src/app/components/checkbox/checkbox-example.component.html
@@ -18,16 +18,28 @@
 
   <ng-template prizmDocPageTab prizmDocHost>
     <prizm-doc-demo>
-      <prizm-checkbox
-        #element
-        [prizmDocHostElement]="element"
-        [checked]="checked"
-        [disabled]="disabled"
-        [size]="size"
-        [indeterminate]="indeterminate"
-      >
-        {{ label }}
-      </prizm-checkbox>
+      <div class="box">
+        <prizm-checkbox
+          #element
+          [prizmDocHostElement]="element"
+          [checked]="checked"
+          [disabled]="disabled"
+          [size]="size"
+          [indeterminate]="indeterminate"
+        >
+          {{ label }}
+        </prizm-checkbox>
+      </div>
+      <div class="box">
+        <prizm-checkbox
+          #element
+          [prizmDocHostElement]="element"
+          [checked]="checked"
+          [disabled]="disabled"
+          [size]="size"
+          [indeterminate]="indeterminate"
+        ></prizm-checkbox>
+      </div>
     </prizm-doc-demo>
     <prizm-doc-documentation>
       <ng-template [(documentationPropertyValue)]="label" documentationPropertyMode="ng-content">
