--- a/libs/components/src/lib/components/checkbox/checkbox.component.less
+++ b/libs/components/src/lib/components/checkbox/checkbox.component.less
@@ -98,6 +98,10 @@
     font-size: 14px;
     line-height: 20px;
   }
+
+  &:empty {
+    display: none;
+  }
 }
 
 :host-context(.prizm-checkbox--disabled) {
