fix: hide breaking in table till 4.0

--- a/apps/doc/src/app/components/table/examples/table-editable-col-example/table-editable-col-example.component.less
+++ b/apps/doc/src/app/components/table/examples/table-editable-col-example/table-editable-col-example.component.less
@@ -15,8 +15,12 @@
 
   .row {
     &_editable {
+      padding: 0;
+
       &:hover,
       .edit-cell:focus {
+        box-shadow: 0 0 0 1px var(--prizm-v3-form-active) inset;
+
         position: relative;
         z-index: 10;
       }
