--- a/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.less
+++ b/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.less
@@ -46,6 +46,8 @@
 
     &_edit {
       td {
+        border: 1px solid var(--prizm-v3-form-active);
+
         position: relative;
         z-index: 10;
 
