--- a/libs/components/src/lib/components/table/th/th.style.less
+++ b/libs/components/src/lib/components/table/th/th.style.less
@@ -25,15 +25,15 @@
   &:not(:first-child) {
     border-left: none;
   }
+  // TODO: for 4.0
+  // &:has([prizmInput]:hover) {
+  //   box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-hover) inset;
+  // }
 
-  &:has([prizmInput]:hover) {
-    box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-hover) inset;
-  }
-
-  &:has([prizmInput]:focus) {
-    background-color: var(--prizm-v3-background-fill-primary);
-    box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-active) inset;
-  }
+  // &:has([prizmInput]:focus) {
+  //   background-color: var(--prizm-v3-background-fill-primary);
+  //   box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-active) inset;
+  // }
 
   .resize-bar {
     height: 100%;
