--- a/libs/components/src/lib/components/table/td/td.component.less
+++ b/libs/components/src/lib/components/table/td/td.component.less
@@ -31,48 +31,54 @@
   background: inherit;
   color: inherit;
 
-  &:has([prizmInput]) {
-    padding: 0;
-  }
+  // TODO: for 4.0
 
-  &:has([prizmInput]:focus) {
-    background-color: var(--prizm-v3-background-fill-primary);
-    box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-active) inset;
-  }
+  // &:has([prizmInput]) {
+  //   padding: 0;
+  // }
+
+  // &:has([prizmInput]:focus) {
+  //   background-color: var(--prizm-v3-background-fill-primary);
+  //   box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-active) inset;
+  // }
 
   &[status='success'] {
     background: var(--prizm-v3-status-success-secondary-default);
 
-    &:has([prizmInput]):hover,
-    &:has([prizmInput]:focus) {
-      box-shadow: 0 0 0 1px var(--prizm-v3-status-success-primary-default) inset;
-    }
+    // TODO: for 4.0
+    // &:has([prizmInput]):hover,
+    // &:has([prizmInput]:focus) {
+    //   box-shadow: 0 0 0 1px var(--prizm-v3-status-success-primary-default) inset;
+    // }
   }
 
   &[status='default'] {
     background: inherit;
 
-    &:has([prizmInput]:not(:focus)):hover {
-      box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-hover) inset;
-    }
+    // TODO: for 4.0
+    // &:has([prizmInput]:not(:focus)):hover {
+    //   box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-hover) inset;
+    // }
   }
 
   &[status='warning'] {
     background: var(--prizm-v3-status-warning-secondary-default);
 
-    &:has([prizmInput]):hover,
-    &:has([prizmInput]:focus) {
-      box-shadow: 0 0 0 1px var(--prizm-v3-status-warning-primary-default) inset;
-    }
+    // TODO: for 4.0
+    // &:has([prizmInput]):hover,
+    // &:has([prizmInput]:focus) {
+    //   box-shadow: 0 0 0 1px var(--prizm-v3-status-warning-primary-default) inset;
+    // }
   }
 
   &[status='danger'] {
     background: var(--prizm-v3-status-alarm-secondary-default);
 
-    &:has([prizmInput]):hover,
-    &:has([prizmInput]:focus) {
-      box-shadow: 0 0 0 1px var(--prizm-v3-status-alarm-primary-default) inset;
-    }
+    // TODO: for 4.0
+    // &:has([prizmInput]):hover,
+    // &:has([prizmInput]:focus) {
+    //   box-shadow: 0 0 0 1px var(--prizm-v3-status-alarm-primary-default) inset;
+    // }
   }
 }
 
